# ELF

./: .gitignore  CMakeLists.txt  Makefile
scripts/: devmode_set_pythonpath.sh
scripts/elfgames/go/: README.md  df_console.py  gtp.sh  pretrained-go-19x19-v2.bin:Zone.Identifier  server_addrs.py  start_client.sh  start_server.sh  train.py
src_cpp/elf/: CMakeLists.txt  Pybind.cpp
src_cpp/elf/ai/: ai.h
src_cpp/elf/ai/tree_search/: mcts.h  tree_search.h  tree_search_base.h  tree_search_options.h
src_cpp/elf/base/: common.h  context.h  ctrl.h  dispatcher.h  extractor.h  sharedmem.h
src_cpp/elf/comm/: broadcast.h  comm.h  primitive.h
src_cpp/elf/concurrency/: ConcurrentQueue.h  Counter.h
src_cpp/elf/distributed/: shared_reader.h  shared_rw_buffer2.h  zmq_util.h
src_cpp/elf/legacy/: python_options_utils_cpp.h
src_cpp/elf/logging/: IndexedLoggerFactory.h  Levels.cpp  Levels.h  Pybind.cpp
src_cpp/elfgames/go/: CMakeLists.txt
src_cpp/elfgames/go/base/: board.cpp  board.h  board_feature.h  common.h  go_state.h
src_cpp/elfgames/go/base/test/: board_feature_test.cpp  coord_test.cpp  go_test.cpp  symmetry_test.cpp  test_utils.h
src_cpp/elfgames/go/common/: dispatcher_callback.h  game_base.h  game_feature.h  game_selfplay.h  game_stats.h  game_utils.h  go_game_specific.h  go_state_ext.h  model_pair.h  notifier.h
src_cpp/elfgames/go/inference/: game_context.h
src_cpp/elfgames/go/mcts/: ai.h  mcts.h  mcts_test.cpp
src_cpp/elfgames/go/sgf/: sgf.h  sgf_test.cpp
src_cpp/elfgames/go/train/: client_manager.h  ctrl_eval.h  ctrl_selfplay.h  data_loader.h  distri_base.h  distri_client.h  distri_server.h  game_context.h  game_ctrl.h  game_train.h
src_py/: utils.py
src_py/rlpytorch/: mongodb.py
src_py/rlpytorch/trainer/: trainer.py
test_py/: config.py
tutorial/zmq/: CMakeLists.txt  client.cpp  server.cpp
